# TAH

./: .gitignore  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_app_features.py  002_add_features_manifest_url.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: app_features.py  applications.py  audit.py  auth.py  permissions.py  roles.py  router.py  tenants.py  users.py
backend/app/core/: __init__.py  exceptions.py  middleware.py  security.py
backend/app/models/: __init__.py  app_catalog.py  app_feature.py  application.py  audit_log.py  external_permission.py  role.py  tenant.py  user.py
backend/app/schemas/: __init__.py  app_catalog.py  app_feature.py  application.py  audit.py  auth.py  common.py  permission.py  role.py  tenant.py  user.py
backend/scripts/: init.sql
backend/scripts/migrations/: 001_add_password_and_invite.sql
backend/tests/: conftest.py
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/layout/: breadcrumbs.tsx  header.tsx  shell.tsx  sidebar.tsx
frontend/src/contexts/: auth-context.tsx  tenant-context.tsx
frontend/src/features/app-catalog/pages/: app-catalog-list.tsx
frontend/src/features/audit/pages/: audit-log.tsx
frontend/src/lib/: constants.ts  utils.ts
frontend/src/types/: app-feature.ts  application.ts  audit.ts  permission.ts  role.ts  tenant.ts  user.ts
(+14 files in other folders)
